<resources>
    <string name="app_name">BigNum</string>
    <string name="result">result</string>
    <string name="correct">correct</string>
    <string name="wrong">wrong</string>
    <string name="instructions_of_the_game">instructions of the game</string>
    <string name="instructions_text">Press the button which is showing greater number</string>
    <string name="result_signal">result signal</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="app_logo">app_logo</string>
    <string name="restart_the_game">Start Again</string>
</resources>